fixed the scrollbar problem

--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,8 @@ html body {
 /* Custom Scrollbar */
 /* Custom Scrollbar - Global */
 ::-webkit-scrollbar {
-    height: 6px;
-    width: 6px;
+    height: 0.5vh; /* Thickness of horizontal scrollbar */
+    width: 0.5vw; /* Thickness of vertical scrollbar */
 }
 
 ::-webkit-scrollbar-track {
@@ -22,7 +22,7 @@ html body {
 
 ::-webkit-scrollbar-thumb {
     background-color: theme('colors.zinc.400');
-    border-radius: 99px;
+    border-radius: 0.5em;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -44,10 +44,4 @@ html body {
 
 .my-app-dark ::-webkit-scrollbar-thumb:hover {
     background-color: theme('colors.zinc.400');
-}
-
-.mobile-active-btn {
-    @apply transition-colors duration-200;
-    @apply @max-sm:bg-zinc-100 dark:@max-sm:bg-zinc-800;
-    @apply hover:bg-zinc-100 dark:hover:bg-zinc-800;
 }
